2007-11-22  Bernhard Kraft  <kraftb@kraftb.at>

	* Added hooks #6738: Hooks for Web>List module which allow modification/addition/removal of icons for each table and its records

2007-11-22  Ingo Renner	<ingo@typo3.org>

	* fixed bug #6741: Add fields cruser_id and crdate to table fe_groups, credit Malte Jansen
	* added feature #6793: Rename User and Tools modules, credits Francois Suter

2007-11-22  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature/bugfix: htmlArea RTE: Enter paragraph on return key corrected and improved
	* Bugfix #6769: RTEhtmlarea not working with IRRE in FF anymore

2007-11-21  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed bug #6785: "this->extraFormHeaders" didn't work anymore since "fixed alt_doc headers" have been introduced (#6625)

2007-11-20  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature #6769 continued: Further adjustments and workarounds to enable htmlArea RTE in Safari

2007-11-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Restored typo3/sysext/lang/locallang_mod_doc.xml because it was zero length and broke translations
	* Fixed bug #6259: Disabling Tabs with no fields
	* Fixed bug #6773: Allow br in flexform labels

2007-11-20  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #6473: CSC - Extend render userFuncs by TS field property

2007-11-20  Benjamin Mack  <mack@xnos.org>

	* Feature #6768: Added the media field for page type "Shortcut" as well
	* Feature #6768: Integrate ext 'Media field for page type External URL' (dkd_media4url)

2007-11-19  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature #6769: Enable htmlArea RTE in Safari

2007-11-19  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #6734: Integrate post processing for links handled by typoLink
	* (feature) Added feature #6346: Enable overriding/renaming field labels by page TSconfig (patch by Malte Jansen)

2007-11-16  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
